test/algeff/wrong/eff-rec2.kk.out
test/algeff/wrong/eff-rec2.kk(8, 8): error: invalid syntax
 unexpected "instance"
 expecting identifier, "<", "::", "val", "fun", "except" or "control"